[package]
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
edition = "2021"
name = "safecoin-bench-tps"
version = "1.15.3"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
serde_json = "1.0.83"
serde_yaml = "0.9.13"
safecoin-clap-utils = { path = "../clap-utils", version = "=1.15.3" }
safecoin-cli-config = { path = "../cli-config", version = "=1.15.3" }
safecoin-client = { path = "../client", version = "=1.15.3" }
solana-connection-cache = { path = "../connection-cache", version = "=1.15.3" }
safecoin-core = { path = "../core", version = "=1.15.3" }
safecoin-faucet = { path = "../faucet", version = "=1.15.3" }
safecoin-genesis = { path = "../genesis", version = "=1.15.3" }
safecoin-gossip = { path = "../gossip", version = "=1.15.3" }
safecoin-logger = { path = "../logger", version = "=1.15.3" }
safecoin-measure = { path = "../measure", version = "=1.15.3" }
safecoin-metrics = { path = "../metrics", version = "=1.15.3" }
safecoin-net-utils = { path = "../net-utils", version = "=1.15.3" }
solana-rpc = { path = "../rpc", version = "=1.15.3" }
solana-rpc-client = { path = "../rpc-client", version = "=1.15.3", default-features = false }
solana-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.3" }
solana-rpc-client-nonce-utils = { path = "../rpc-client-nonce-utils", version = "=1.15.3" }
safecoin-runtime = { path = "../runtime", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-streamer = { path = "../streamer", version = "=1.15.3" }
solana-thin-client = { path = "../thin-client", version = "=1.15.3" }
solana-tpu-client = { path = "../tpu-client", version = "=1.15.3", default-features = false }
safecoin-version = { path = "../version", version = "=1.15.3" }
spl-instruction-padding = "0.1"
thiserror = "1.0"

[dev-dependencies]
serial_test = "0.9.0"
solana-local-cluster = { path = "../local-cluster", version = "=1.15.3" }
safecoin-test-validator = { path = "../test-validator", version = "=1.15.3" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
