[package]
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
edition = "2021"
name = "safecoin-cli"
description = "Safecoin: Enterprise Security for the Community by the Community"
version = "1.15.3"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
console = "0.15.0"
const_format = "0.2.26"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5"
ctrlc = { version = "3.2.3", features = ["termination"] }
humantime = "2.0.1"
log = "0.4.17"
num-traits = "0.2"
pretty-hex = "0.3.0"
reqwest = { version = "0.11.12", default-features = false, features = [
	"blocking",
	"brotli",
	"deflate",
	"gzip",
	"rustls-tls",
	"json"
] }
semver = "1.0.16"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_json = "1.0.83"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.15.3" }
safecoin-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.15.3" }
safecoin-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.15.3" }
safecoin-clap-utils = { path = "../clap-utils", version = "=1.15.3" }
safecoin-cli-config = { path = "../cli-config", version = "=1.15.3" }
safecoin-cli-output = { path = "../cli-output", version = "=1.15.3" }
safecoin-client = { path = "../client", version = "=1.15.3" }
safecoin-config-program = { path = "../programs/config", version = "=1.15.3" }
safecoin-faucet = { path = "../faucet", version = "=1.15.3" }
safecoin-logger = { path = "../logger", version = "=1.15.3" }
safecoin-program-runtime = { path = "../program-runtime", version = "=1.15.3" }
safecoin-pubsub-client = { path = "../pubsub-client", version = "=1.15.3" }
safecoin-remote-wallet = { path = "../remote-wallet", version = "=1.15.3" }
safecoin-rpc-client = { path = "../rpc-client", version = "=1.15.3" }
safecoin-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.3" }
safecoin-rpc-client-nonce-utils = { path = "../rpc-client-nonce-utils", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-tpu-client = { path = "../tpu-client", version = "=1.15.3" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.15.3" }
safecoin-version = { path = "../version", version = "=1.15.3" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.15.3" }
solana_rbpf = "=0.2.39"
safe-memo = { path = "../../safecoin-program-library/memo/program", version = "=3.0.7", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"

[dev-dependencies]
safecoin-streamer = { path = "../streamer", version = "=1.15.3" }
safecoin-test-validator = { path = "../test-validator", version = "=1.15.3" }
tempfile = "3.3.0"

[[bin]]
name = "safecoin"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
