[package]
name = "safecoin-client-test"
version = "1.15.3"
description = "Safecoin RPC Test"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-client-test"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.25"
serde_json = "1.0.83"
safecoin-ledger = { path = "../ledger", version = "=1.15.3" }
safecoin-measure = { path = "../measure", version = "=1.15.3" }
safecoin-merkle-tree = { path = "../merkle-tree", version = "=1.15.3" }
safecoin-metrics = { path = "../metrics", version = "=1.15.3" }
safecoin-perf = { path = "../perf", version = "=1.15.3" }
solana-pubsub-client = { path = "../pubsub-client", version = "=1.15.3" }
safecoin-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.15.3" }
solana-rpc = { path = "../rpc", version = "=1.15.3" }
solana-rpc-client = { path = "../rpc-client", version = "=1.15.3", default-features = false }
solana-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.3" }
safecoin-runtime = { path = "../runtime", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-streamer = { path = "../streamer", version = "=1.15.3" }
safecoin-test-validator = { path = "../test-validator", version = "=1.15.3" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.15.3" }
safecoin-version = { path = "../version", version = "=1.15.3" }
systemstat = "0.2.0"
tokio = { version = "~1.14.1", features = ["full"] }
tungstenite = { version = "0.17.2", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
safecoin-logger = { path = "../logger", version = "=1.15.3" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
