[package]
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
edition = "2021"
name = "safecoin-dos"
version = "1.15.3"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = "0.5.6"
itertools = "0.10.5"
log = "0.4.17"
rand = "0.7.0"
serde = "1.0.144"
safecoin-bench-tps = { path = "../bench-tps", version = "=1.15.3" }
safecoin-client = { path = "../client", version = "=1.15.3" }
safecoin-core = { path = "../core", version = "=1.15.3" }
safecoin-faucet = { path = "../faucet", version = "=1.15.3" }
safecoin-gossip = { path = "../gossip", version = "=1.15.3" }
safecoin-logger = { path = "../logger", version = "=1.15.3" }
safecoin-measure = { path = "../measure", version = "=1.15.3" }
safecoin-net-utils = { path = "../net-utils", version = "=1.15.3" }
safecoin-perf = { path = "../perf", version = "=1.15.3" }
safecoin-rpc = { path = "../rpc", version = "=1.15.3" }
safecoin-rpc-client = { path = "../rpc-client", version = "=1.15.3", default-features = false }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-streamer = { path = "../streamer", version = "=1.15.3" }
safecoin-tpu-client = { path = "../tpu-client", version = "=1.15.3", default-features = false }
safecoin-version = { path = "../version", version = "=1.15.3" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
serial_test = "0.9.0"
safecoin-local-cluster = { path = "../local-cluster", version = "=1.15.3" }
safecoin-thin-client = { path = "../thin-client", version = "=1.15.3" }
