[package]
name = "safecoin-logger"
version = "1.15.3"
description = "Safecoin Logger"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-logger"
edition = "2021"

[dependencies]
env_logger = "0.9.3"
lazy_static = "1.4.0"
log = "0.4.17"

[lib]
name = "solana_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
