[package]
name = "solana-memory-management"
version = "1.15.3"
description = "Safecoin memory management"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://safecoin.org/"
license = "Apache-2.0"
edition = "2021"
