[package]
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
edition = "2021"
name = "safecoin-net-shaper"
description = "The safecoin cluster network shaping tool"
version = "1.15.3"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
publish = false

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
rand = "0.7.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
safecoin-logger = { path = "../logger", version = "=1.15.3" }

[[bin]]
name = "safecoin-net-shaper"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
