[package]
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
description = "Safecoin Program Test Framework"
edition = "2021"
license = "Apache-2.0"
name = "safecoin-program-test"
repository = "https://github.com/fair-exchange/safecoin"
version = "1.15.3"

[dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.57"
base64 = "0.13.0"
bincode = "1.3.3"
chrono-humanize = "0.2.1"
crossbeam-channel = "0.5"
log = "0.4.17"
serde = "1.0.144"
safecoin-banks-client = { path = "../banks-client", version = "=1.15.3" }
safecoin-banks-interface = { path = "../banks-interface", version = "=1.15.3" }
safecoin-banks-server = { path = "../banks-server", version = "=1.15.3" }
safecoin-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.15.3" }
safecoin-logger = { path = "../logger", version = "=1.15.3" }
safecoin-program-runtime = { path = "../program-runtime", version = "=1.15.3" }
safecoin-runtime = { path = "../runtime", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.15.3" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
safecoin-stake-program = { path = "../programs/stake", version = "=1.15.3" }
