[package]
name = "solana-quic-client"
version = "1.15.3"
description = "Safecoin Quic Client"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-quic-client"
edition = "2021"

[dependencies]
async-mutex = "1.4.0"
async-trait = "0.1.57"
futures = "0.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
quinn = "0.9.3"
quinn-proto = "0.9.2"
quinn-udp = "0.3.2"
rustls = { version = "0.20.6", default-features = false, features = ["dangerous_configuration", "logging"] }
solana-connection-cache = { path = "../connection-cache", version = "=1.15.3" }
safecoin-measure = { path = "../measure", version = "=1.15.3" }
safecoin-metrics = { path = "../metrics", version = "=1.15.3" }
safecoin-net-utils = { path = "../net-utils", version = "=1.15.3" }
solana-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-streamer = { path = "../streamer", version = "=1.15.3" }
solana-tpu-client = { path = "../tpu-client", version = "=1.15.3" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
crossbeam-channel = "0.5"
safecoin-logger = { path = "../logger", version = "=1.15.3" }
safecoin-perf = { path = "../perf", version = "=1.15.3" }
