[package]
name = "safecoin-rpc-client-api"
version = "1.15.3"
description = "Safecoin Client Common Utilities"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-rpc-client-api"
edition = "2021"

[dependencies]
base64 = "0.13.0"
bs58 = "0.4.0"
jsonrpc-core = "18.0.0"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = "1.0.16"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_json = "1.0.83"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.15.3" }
safecoin-version = { path = "../version", version = "=1.15.3" }
safe-token-2022 = { version = "=0.5.0", path = "../../safecoin-program-library/token/program-2022", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
