[package]
name = "solana-rpc-client-nonce-utils"
version = "1.15.3"
description = "Safecoin RPC Client Nonce Utilities"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-nonce-client"
edition = "2021"

[dependencies]
clap = "2.33.0"
safecoin-clap-utils = { path = "../clap-utils", version = "=1.15.3" }
solana-rpc-client = { path = "../rpc-client", version = "=1.15.3", default-features = false }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0.58"
futures = "0.3"
serde_json = "1.0.83"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.15.3" }
solana-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.3" }
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
