[package]
name = "solana-rpc-test"
version = "1.15.3"
description = "Safecoin RPC Test"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-rpc-test"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
crossbeam-channel = "0.5"
futures-util = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
serde = "1.0.144"
serde_json = "1.0.83"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.15.3" }
safecoin-client = { path = "../client", version = "=1.15.3" }
solana-pubsub-client = { path = "../pubsub-client", version = "=1.15.3" }
solana-rpc = { path = "../rpc", version = "=1.15.3" }
solana-rpc-client = { path = "../rpc-client", version = "=1.15.3", default-features = false }
solana-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-streamer = { path = "../streamer", version = "=1.15.3" }
safecoin-test-validator = { path = "../test-validator", version = "=1.15.3" }
solana-tpu-client = { path = "../tpu-client", version = "=1.15.3", default-features = false }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.15.3" }
tokio = { version = "~1.14.1", features = ["full"] }

[dev-dependencies]
safecoin-logger = { path = "../logger", version = "=1.15.3" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
