[package]
name = "safecoin-thin-client"
version = "1.15.3"
description = "Safecoin Thin Client"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-thin-client"
edition = "2021"

[dependencies]
bincode = "1.3.3"
log = "0.4.17"
rayon = "1.5.3"
safecoin-connection-cache = { path = "../connection-cache", version = "=1.15.3", default-features = false }
safecoin-rpc-client = { path = "../rpc-client", version = "=1.15.3", default-features = false }
safecoin-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-tpu-client = { path = "../tpu-client", version = "=1.15.3", default-features = false }

[dev-dependencies]
safecoin-logger = { path = "../logger", version = "=1.15.3" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
