[package]
name = "solana-tpu-client"
version = "1.15.3"
description = "Safecoin TPU Client"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-tpu-client"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
bincode = "1.3.3"
futures-util = "0.3.25"
indexmap = "1.9.1"
indicatif = { version = "0.17.1", optional = true }
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
solana-connection-cache = { path = "../connection-cache", version = "=1.15.3" }
safecoin-measure = { path = "../measure", version = "=1.15.3" }
safecoin-metrics = { path = "../metrics", version = "=1.15.3" }
safecoin-net-utils = { path = "../net-utils", version = "=1.15.3" }
solana-pubsub-client = { path = "../pubsub-client", version = "=1.15.3" }
solana-rpc-client = { path = "../rpc-client", version = "=1.15.3", default-features = false }
solana-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
rand_chacha = "0.2.2"
safecoin-logger = { path = "../logger", version = "=1.15.3" }

[features]
default = ["spinner"]
# Support tpu-client methods that feature a spinner progress bar for
# command-line interfaces
spinner = ["dep:indicatif", "solana-rpc-client/spinner"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
