[package]
name = "safecoin-transaction-status"
version = "1.15.3"
description = "Safecoin transaction status types"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-transaction-status"
license = "Apache-2.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
bincode = "1.3.3"
borsh = "0.9.1"
bs58 = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_json = "1.0.83"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.15.3" }
safecoin-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safe-associated-token-account = { version = "=1.1.2", features = ["no-entrypoint"] }
safe-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
safe-token = { version = "=3.5.0", features = ["no-entrypoint"] }
safe-token-2022 = { version = "=0.5.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
