[package]
name = "solana-udp-client"
version = "1.15.3"
description = "Safecoin UDP Client"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-udp-client"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
solana-connection-cache = { path = "../connection-cache", version = "=1.15.3", default-features = false }
safecoin-net-utils = { path = "../net-utils", version = "=1.15.3" }
safecoin-sdk = { path = "../sdk", version = "=1.15.3" }
safecoin-streamer = { path = "../streamer", version = "=1.15.3" }
solana-tpu-client = { path = "../tpu-client", version = "=1.15.3" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
