[package]
name = "safecoin-upload-perf"
version = "1.15.3"
description = "Metrics Upload Utility"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
edition = "2021"
homepage = "https://safecoin.org/"
publish = false

[dependencies]
serde_json = "1.0.83"
safecoin-metrics = { path = "../metrics", version = "=1.15.3" }

[[bin]]
name = "safecoin-upload-perf"
path = "src/upload-perf.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
