[package]
name = "safecoin-config-program"
version = "1.15.3"
description = "Safecoin Config program"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-config-program"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.22", features = ["serde"] }
serde = "1.0.144"
serde_derive = "1.0.103"
safecoin-program-runtime = { path = "../../program-runtime", version = "=1.15.3" }
safecoin-sdk = { path = "../../sdk", version = "=1.15.3" }

[dev-dependencies]
safecoin-logger = { path = "../../logger", version = "=1.15.3" }

[lib]
crate-type = ["lib"]
name = "solana_config_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
