[package]
name = "safecoin-stake-program"
version = "1.15.3"
description = "Safecoin Stake program"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-stake-program"
edition = "2021"

[dependencies]
bincode = "1.3.3"
log = "0.4.17"
safecoin-config-program = { path = "../config", version = "=1.15.3" }
safecoin-program-runtime = { path = "../../program-runtime", version = "=1.15.3" }
safecoin-sdk = { path = "../../sdk", version = "=1.15.3" }
safecoin-vote-program = { path = "../vote", version = "=1.15.3" }

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.0"
safecoin-logger = { path = "../../logger", version = "=1.15.3" }
test-case = "2.2.2"

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib"]
name = "solana_stake_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
