[package]
name = "safecoin-cargo-build-bpf"
version = "1.15.3"
description = "Compile a local package and all of its dependencies using the Safecoin SBF SDK"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://safecoin.org/"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
cargo_metadata = "0.15.0"
clap = { version = "3.1.5", features = ["cargo", "env"] }
log = { version = "0.4.17", features = ["std"] }
safecoin-logger = { path = "../../logger", version = "=1.15.3" }
safecoin-sdk = { path = "..", version = "=1.15.3" }

[features]
program = []

[[bin]]
name = "cargo-build-bpf"
path = "src/main.rs"
