[package]
name = "safecoin-cargo-build-sbf"
version = "1.15.3"
description = "Compile a local package and all of its dependencies using the Safecoin SBF SDK"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://safecoin.org/"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
bzip2 = "0.4.4"
cargo_metadata = "0.15.0"
clap = { version = "3.1.5", features = ["cargo", "env"] }
log = { version = "0.4.17", features = ["std"] }
regex = "1.6.0"
reqwest = { version = "0.11", features = ["blocking"] }
semver = "1.0"
safecoin-download-utils = { path = "../../download-utils", version = "=1.15.3" }
safecoin-logger = { path = "../../logger", version = "=1.15.3" }
safecoin-sdk = { path = "..", version = "=1.15.3" }
tar = "0.4.38"

[dev-dependencies]
assert_cmd = "*"
predicates = "2.1"
serial_test = "*"

[features]
program = []

[[bin]]
name = "cargo-build-sbf"
path = "src/main.rs"
