[package]
name = "safecoin-cargo-test-sbf"
version = "1.15.3"
description = "Execute all unit and integration tests after building with the Safecoin SBF SDK"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://safecoin.org/"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
cargo_metadata = "0.15.0"
clap = { version = "3.1.5", features = ["cargo"] }
log = { version = "0.4.17", features = ["std"] }
safecoin-logger = { path = "../../logger", version = "=1.15.3" }

[[bin]]
name = "cargo-test-sbf"
path = "src/main.rs"
