[package]
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
description = "Safecoin: Enterprise Security for the Community by the Community"
edition = "2021"
homepage = "https://safecoin.org/"
license = "Apache-2.0"
name = "proto"
publish = false
repository = "https://github.com/fair-exchange/safecoin"
version = "1.15.3"

[dependencies]
tonic-build = "0.8.0"

# windows users should install the protobuf compiler manually and set the PROTOC
# envar to point to the installed binary
[target."cfg(not(windows))".dependencies]
protobuf-src = "1.0.5"
