[package]
name = "safecoin-sbf-rust-dep-crate"
version = "1.15.3"
description = "Safecoin SBF test program written in Rust"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-sbf-rust-dep-crate"
edition = "2021"

[dependencies]
byteorder = { version = "1", default-features = false }
# list of crates which must be buildable for bpf programs
safecoin-address-lookup-table-program = { path = "../../../../programs/address-lookup-table", version = "=1.15.3" }
safecoin-program = { path = "../../../../sdk/program", version = "=1.15.3" }

[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
