[package]
name = "solana-sbf-rust-dup-accounts"
version = "1.15.3"
description = "Safecoin SBF test program written in Rust"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-sbf-rust-dup-accounts"
edition = "2021"

[dependencies]
safecoin-program = { path = "../../../../sdk/program", version = "=1.15.3" }

[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
